--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,14 @@
-__pychache
-include
-lib
-scripts
+__pycache__/
+*.py[cod]
+*.log
+*.sqlite3
 .env
+venv/
+env/
+lib/
+include/
+Scripts/
+*.egg-info/
+.DS_Store
+.idea/
+*.bak
